Database connection (GET/PUT/POST)
